--- a/dashboard-ui/src/app/layout/header/header.component.html
+++ b/dashboard-ui/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container">
-    <a href="/" class="logo fs-3 fw-semibold">Device Host</a>
+    <a href="/" class="logo fs-3 fw-semibold">Food App</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -30,14 +30,6 @@
               routerLinkActive="active"
               class="nav-link"
               >Users</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              [routerLink]="['/devices']"
-              routerLinkActive="active"
-              class="nav-link"
-              >Devices</a
             >
           </li>
         </ng-template>
