--- a/dashboard-ui/src/app/module/auth/page/login/login.component.html
+++ b/dashboard-ui/src/app/module/auth/page/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="col-md-8 col-lg-6 col-xxl-5 mx-auto">
-    <app-auth-card title="Welcome to Device Host">
+    <app-auth-card title="Welcome to Food App">
       <form [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="mb-3">
           <label for="emailInput" class="form-label">Email address</label>
