Add Continious Deployment

--- a/dashboard-ui/src/app/module/auth/page/register/register.component.html
+++ b/dashboard-ui/src/app/module/auth/page/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="col-md-8 col-lg-6 col-xxl-5 mx-auto">
-    <app-auth-card title="Sign Up to Food App">
+    <app-auth-card title="Sign Up to Statistics App">
       <form [formGroup]="registrationForm" (ngSubmit)="register()">
         <div class="mb-3">
           <label for="nameInput" class="form-label">Name</label>
