--- a/dashboard-ui/src/app/layout/header/header.component.html
+++ b/dashboard-ui/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container">
-    <a href="/" class="logo fs-3 fw-semibold">Food App</a>
+    <a href="/" class="logo fs-3 fw-semibold">Statistics App</a>
     <button
       class="navbar-toggler"
       type="button"
