Add company details

--- a/dashboard-ui/src/app/module/dashboard/page/main/main.component.scss
+++ b/dashboard-ui/src/app/module/dashboard/page/main/main.component.scss
@@ -1,6 +1,13 @@
+.pt-25 {
+  padding-top: 0.75rem;
+}
+
+.click {
+  cursor: pointer;
+}
 
 .col.active:hover {
-  background-color: #CADBF1;
+  background-color: #cadbf1;
 }
 
 .bi-pc {
