--- a/dashboard-ui/src/app/module/dashboard/page/main/main.component.html
+++ b/dashboard-ui/src/app/module/dashboard/page/main/main.component.html
@@ -5,7 +5,6 @@
     </div>
   </div>
 
-
   <div class="row mt-3">
     <div class="col">
       <input
@@ -27,10 +26,7 @@
       </div>
     </div>
 
-    <div
-      class="row mb-3"
-      *ngFor="let company of companies.content"
-    >
+    <div class="row mb-3" *ngFor="let company of companies.content">
       <div class="col">
         <app-card>
           <div class="d-flex justify-content-between">
@@ -38,8 +34,13 @@
               <div>
                 <i class="bi bi-shop"></i>
               </div>
-              <div class="ms-3 pt-3 pb-1">
-                <div class="name-font">{{ company.name }}</div>
+              <div class="ms-3 pt-25 pb-1">
+                <a
+                  class="name-font"
+                  [routerLink]="['/company/', company.regcode]"
+                >
+                  {{ company.name }}
+                </a>
               </div>
             </div>
           </div>
@@ -60,9 +61,7 @@
                 let page = index
               "
             >
-              <a class="page-link" (click)="updatePage(page)">{{
-                page + 1
-              }}</a>
+              <a class="page-link" (click)="updatePage(page)">{{ page + 1 }}</a>
             </li>
           </ul>
         </nav>
