--- a/dashboard-ui/src/app/module/dashboard/page/company-details/company-details.component.html
+++ b/dashboard-ui/src/app/module/dashboard/page/company-details/company-details.component.html
@@ -65,10 +65,18 @@
       </div>
     </div>
 
-    <div class="row mt-4">
-      <div class="col">
-        <h3>Financial Statements</h3>
+    <ng-container *ngIf="company.financialStatements.length > 0">
+      <div class="row mt-4">
+        <div class="col">
+          <h3>Financial Statements</h3>
+        </div>
       </div>
-    </div>
+
+      <div class="row mt-3">
+        <div class="col">
+          <app-financial-statements [financialStatements]="company.financialStatements"></app-financial-statements>
+        </div>
+      </div>
+    </ng-container>
   </ng-container>
 </div>
