--- a/dashboard-ui/src/styles.scss
+++ b/dashboard-ui/src/styles.scss
@@ -23,3 +23,13 @@ h3 {
 
   color: #0f2757;
 }
+
+h4 {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 600;
+  line-height: 35px;
+  /* Dark Primary */
+
+  color: #0f2757;
+}
