Add employee and income range filters

--- a/dashboard-ui/src/app/module/dashboard/components/financial-statements/financial-statements.component.html
+++ b/dashboard-ui/src/app/module/dashboard/components/financial-statements/financial-statements.component.html
@@ -24,7 +24,7 @@
   </ul>
 </div>
 
-<div class="p-3" *ngIf="activeFinancialStatement">
+<div class="p-4 bg-white border" *ngIf="activeFinancialStatement">
   <h4>Financial Data</h4>
 
   <div class="d-flex w-100 flex-wrap data-container">
