--- a/dashboard-ui/src/app/layout/header/header.component.html
+++ b/dashboard-ui/src/app/layout/header/header.component.html
@@ -23,7 +23,7 @@
             >Home</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isLoggedIn() && hasComparisons()">
           <a
             [routerLink]="['/compare']"
             routerLinkActive="active"
