--- a/dashboard-ui/src/app/module/dashboard/page/main/main.component.html
+++ b/dashboard-ui/src/app/module/dashboard/page/main/main.component.html
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <div class="col-md-4 pt-24">
+    <div class="col-md-2 pt-24">
       <div class="form-check form-switch">
         <input
           class="form-check-input"
@@ -108,6 +108,22 @@
         />
         <label class="form-check-label" for="activeCompaniesSwitch">
           Active companies
+        </label>
+      </div>
+    </div>
+
+    <div class="col-md-2 pt-24">
+      <div class="form-check form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          [(ngModel)]="query.hasStats"
+          (ngModelChange)="onSearch()"
+          id="hasStatsSwitch"
+        />
+        <label class="form-check-label" for="hasStatsSwitch">
+          Has Stats
         </label>
       </div>
     </div>
