--- a/dashboard-ui/src/app/module/dashboard/page/main/main.component.html
+++ b/dashboard-ui/src/app/module/dashboard/page/main/main.component.html
@@ -7,32 +7,18 @@
 
   <div class="row mt-3">
     <div class="col-md-3">
-      <select
-        class="form-select form-select-lg"
-        aria-label="Select company type"
-        [(ngModel)]="query.companyType"
-        (ngModelChange)="onSearch()"
-      >
+      <select class="form-select form-select-lg" aria-label="Select company type" [(ngModel)]="query.companyType"
+        (ngModelChange)="onSearch()">
         <option value="ALL">All</option>
-        <option
-          *ngFor="let companyType of companyTypes$ | async"
-          [value]="companyType.code"
-        >
+        <option *ngFor="let companyType of companyTypes$ | async" [value]="companyType.code">
           {{ companyType.text || companyType.code }}
         </option>
       </select>
     </div>
 
     <div class="col-md-9">
-      <input
-        type="text"
-        name="deviceName"
-        id="deviceNameInput"
-        placeholder="Search query"
-        class="form-control form-control-lg"
-        [(ngModel)]="query.search"
-        (ngModelChange)="onSearch()"
-      />
+      <input type="text" name="deviceName" id="deviceNameInput" placeholder="Search query"
+        class="form-control form-control-lg" [(ngModel)]="query.search" (ngModelChange)="onSearch()" />
     </div>
   </div>
 
@@ -44,25 +30,13 @@
       <div class="d-flex pt-2">
         <div class="input-group">
           <span class="input-group-text" id="fromEmployeeCount">From</span>
-          <input
-            type="number"
-            class="form-control"
-            id="inputEmployeeCountFrom"
-            aria-describedby="fromEmployeeCount"
-            [(ngModel)]="query.employeeFrom"
-            (ngModelChange)="onSearch()"
-          />
+          <input type="number" class="form-control" id="inputEmployeeCountFrom" aria-describedby="fromEmployeeCount"
+            [(ngModel)]="query.employeeFrom" (ngModelChange)="onSearch()" />
         </div>
         <div class="input-group ms-2">
           <span class="input-group-text" id="toEmployeeCount">To</span>
-          <input
-            type="number"
-            class="form-control"
-            id="inputEmployeeCountTo"
-            aria-describedby="toEmployeeCount"
-            [(ngModel)]="query.employeeTo"
-            (ngModelChange)="onSearch()"
-          />
+          <input type="number" class="form-control" id="inputEmployeeCountTo" aria-describedby="toEmployeeCount"
+            [(ngModel)]="query.employeeTo" (ngModelChange)="onSearch()" />
         </div>
       </div>
     </div>
@@ -73,39 +47,21 @@
       <div class="d-flex pt-2">
         <div class="input-group">
           <span class="input-group-text" id="fromIncomeCount">From</span>
-          <input
-            type="number"
-            class="form-control"
-            id="inputIncomeCountFrom"
-            aria-describedby="fromIncomeCount"
-            [(ngModel)]="query.incomeFrom"
-            (ngModelChange)="onSearch()"
-          />
+          <input type="number" class="form-control" id="inputIncomeCountFrom" aria-describedby="fromIncomeCount"
+            [(ngModel)]="query.incomeFrom" (ngModelChange)="onSearch()" />
         </div>
         <div class="input-group ms-2">
           <span class="input-group-text" id="toIncomeCount">To</span>
-          <input
-            type="number"
-            class="form-control"
-            id="inputIncomeCountTo"
-            aria-describedby="toIncomeCount"
-            [(ngModel)]="query.incomeTo"
-            (ngModelChange)="onSearch()"
-          />
+          <input type="number" class="form-control" id="inputIncomeCountTo" aria-describedby="toIncomeCount"
+            [(ngModel)]="query.incomeTo" (ngModelChange)="onSearch()" />
         </div>
       </div>
     </div>
 
     <div class="col-md-2 pt-24">
       <div class="form-check form-switch">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          role="switch"
-          [(ngModel)]="query.activeCompanies"
-          (ngModelChange)="onSearch()"
-          id="activeCompaniesSwitch"
-        />
+        <input class="form-check-input" type="checkbox" role="switch" [(ngModel)]="query.activeCompanies"
+          (ngModelChange)="onSearch()" id="activeCompaniesSwitch" />
         <label class="form-check-label" for="activeCompaniesSwitch">
           Active companies
         </label>
@@ -114,19 +70,26 @@
 
     <div class="col-md-2 pt-24">
       <div class="form-check form-switch">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          role="switch"
-          [(ngModel)]="query.hasStats"
-          (ngModelChange)="onSearch()"
-          id="hasStatsSwitch"
-        />
+        <input class="form-check-input" type="checkbox" role="switch" [(ngModel)]="query.hasStats"
+          (ngModelChange)="onSearch()" id="hasStatsSwitch" />
         <label class="form-check-label" for="hasStatsSwitch">
           Has Stats
         </label>
       </div>
     </div>
+  </div>
+  <div class="row mt-2">
+    <div class="col-md-1 pt-12">
+      <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" role="switch" [(ngModel)]="showMap" (ngModelChange)="onSearch()" id="mapSwitch" />
+        <label class="form-check-label" for="mapSwitch">
+          Map
+        </label>
+      </div>
+    </div>
+    <ng-container *ngIf='showMap'>
+      <app-country-map (refresh)="onSearch()"></app-country-map>
+    </ng-container>
   </div>
 
   <ng-container *ngIf="companies$ | async; let companies">
@@ -147,15 +110,10 @@
         <div class="col">
           <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
-              <li
-                class="page-item"
-                [class.active]="query.page === page"
-                [class.click]="query.page !== page"
-                *ngFor="
+              <li class="page-item" [class.active]="query.page === page" [class.click]="query.page !== page" *ngFor="
                   let num of numSequence(companies.totalPages);
                   let page = index
-                "
-              >
+                ">
                 <a class="page-link" (click)="updatePage(page)">{{ page + 1 }}</a>
               </li>
             </ul>
