--- a/dashboard-ui/src/app/layout/header/header.component.html
+++ b/dashboard-ui/src/app/layout/header/header.component.html
@@ -41,6 +41,15 @@
             >Tops</a
           >
         </li>
+        <li class="nav-item" *ngIf="isLoggedIn()">
+          <a
+            [routerLink]="['/sets']"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="nav-link"
+            >Sets</a
+          >
+        </li>
         <ng-template [ngIf]="isLoggedIn() && isAdmin()">
           <li class="nav-item">
             <a
